--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     max-width: 1020px;
     margin: 0 auto;
     font-family: 'Lato', sans-serif;
+    scroll-behavior: smooth;
 }
 
 html {
@@ -22,7 +23,7 @@ html {
     background: -webkit-radial-gradient(top right, #C9A06A, #012C97);
     background: -moz-radial-gradient(top right, #C9A06A, #012C97);
     background: radial-gradient(to bottom left, #C9A06A, #012C97);
-    ;
+    scroll-behavior: smooth;
 }
 
 /*PART1*/
@@ -83,19 +84,17 @@ html {
     margin-top: 15px;
     text-decoration: none;
     color: white;
+    scroll-behavior: smooth;
  }
 
- .navigation ul li a:hover {
-    color: #f06c64;
+ .navigation ul li a:hover,
+ .navigation_active {
+    color: #f06c64 !important;
  }
 
  .navigation-home {
     margin-left: 5px;
     visibility: hidden;
- }
-
- .navigation_home_red {
-    color: #f06c64 !important;
  }
 
  .navigation ul li span {
@@ -123,8 +122,73 @@ html {
     margin-left: 50px;
  }
 
- .picture {
-    position: relative;
+ .picture1 {
+    height: 600px;
+    width: 1020px;
+    background-color: #f06c64;
+ }
+
+ .picture2 {
+    height: 600px;
+    width: 1020px;
+    background-color: #648BF0;
+ }
+ .phone-center {
+     text-align: center;
+     padding-top: 50px;
+ }
+
+ .sl_p {
+     display: none;
+     justify-content: space-between;
+     animation: 0s ease-in-out;
+ }
+ .picture_active, .next {
+     display: block;
+ }
+
+ .next {
+     position: absolute;
+     top: 0;
+     width: 100%;
+ }
+
+ .to-left{
+    animation-name: left;
+ }
+ .to-right{
+    animation-name: right;
+    animation-direction: reverse;
+ }
+ .from-left{
+    animation-name: left;
+    animation-direction: reverse;
+ }
+ .from-right{
+    animation-name: right;
+ }
+
+ @keyframes left {
+    from {
+        left: 0;
+    }
+    to {
+        left -100%;
+    }
+ }
+ @keyframes right {
+    from {
+        left: 100%;
+    }
+    to {
+        left: 0;
+    }
+ }
+
+ @media (max-width: 1020px) {
+     .description {
+         flex-direction: column;
+     }
  }
 
  .arrow {
@@ -138,14 +202,14 @@ html {
 
  .slider__arrow_left {
     position: absolute;
+    transform: rotate(135deg);
     top: 284px;
     left: 45px;
-    transform: rotate(135deg);
  }
 
  .slider__arrow_right {
-    transform: rotate(-45deg);
     position: absolute;
+    transform: rotate(-45deg);
     top: 284px;
     right: 43px;
  }
@@ -154,43 +218,44 @@ html {
     border-color: #673333;
  }
 
- #iphone-vertical-shadow {
+ .iphone-vertical-shadow {
     position: absolute;
     left: 112px;
     top: 53px;
  }
 
- #iphone-vertical-body {
+ .iphone-vertical-body {
     position: absolute;
     left: -9px;
     top: 175px;
     transform: rotate(-90deg);
  }
 
- #iphone-vertical-screen {
+ .iphone-vertical-screen {
     position: absolute;
     left: 123px;
     top: 115px;
  }
 
- #iphone-horizontal-shadow {
+ .iphone-horizontal-shadow {
     position: absolute;
     left: 547px;
     top: 53px;
     transform: rotateY(180deg) rotateZ(-90deg);
  }
 
- #iphone-horizontal-body {
+ .iphone-horizontal-body {
     position: absolute;
     left: 425px;
     top: 174px;
  }
 
- #iphone-horizontal-screen {
+ .iphone-horizontal-screen {
     position: absolute;
     left: 482px;
     top: 185px;
  }
+
 
 */*our_services*/
  .our_services {
@@ -218,7 +283,6 @@ html {
     margin-top: 18px;
     color: #767e9e;
     font-weight: 300;
-    /*letter-spacing: -0.02px;*/
     text-align: justify;
  }
 
@@ -235,6 +299,7 @@ html {
     color: #666d89;
     font-weight: 900;
     margin: 0;
+
  }
 
  .item-text p {
@@ -250,7 +315,7 @@ html {
     display: flex;
     width: 300px;
     height: 85px;
-    /*overflow: hidden;*/
+    overflow: hidden;
     text-overflow: clip;
     margin-bottom: 38px;
  }
@@ -329,9 +394,10 @@ html {
     cursor: pointer;
     padding: 0 6.3px;
     margin-right: 9.15px;
+    text-align: center;
  }
 
- .portfolio_button_all,
+ .portfolio_active,
  .portfolio_button:hover {
     color: #dedede;
     border: 1px solid #c5c5c5;
@@ -353,6 +419,12 @@ html {
     margin-bottom: 20px;
     list-style-type: none;
     display: block;
+ }
+
+ .portfolio_pictures_active {
+     border: 5px solid #F06C64;
+     width: 220px;
+     height: 187px;
  }
 
 */*about_us*/
@@ -543,15 +615,14 @@ html {
     font-size: 11px;
     color: #f48c8f;
     font-weight: 400;
-    letter-spacing: 0.3px;
+    letter-spacing: 0.45px;
+    font-family: 'Lato', sans-serif;
  }
 
  .get_a_quote_textarea::-webkit-input-placeholder {
     font-size: 12px;
     color: #f48c8f;
     font-weight: 400;
-    letter-spacing: -1px;
-    word-spacing: -3px;
  }
 
  .get_a_quote_textarea {
@@ -562,13 +633,13 @@ html {
     resize: none;
     border: none;
     border-radius: 5px;
-    padding-top: 12px;
+    padding-top: 10px;
     padding-left: 15px;
     display: block;
     margin-bottom: 16px;
     font-size: 11px;
     font-weight: 400;
-    word-spacing: -3px;
+    font-family: 'Lato', sans-serif;
  }
 
  .get_a_quote_sub {
@@ -646,6 +717,33 @@ html {
     font-weight: 400;
     padding-left: 10px;
     text-decoration: none;
+ }
+
+ #message_block {
+     position: fixed;
+     width: 100%;
+     height: 100%;
+     background: #0008;
+     top: 0;
+     left: 0;
+     font-weight: bold;
+ }
+
+ #message_block.hidden {
+     display: none;
+ }
+
+ #message {
+     position: absolute;
+     top: 50%;
+     left: 45%;
+     border: 2px solid black;
+     border-radius: 10px;
+     text-align: center;
+     background: white;
+     width: 200px;
+     height: 100px;
+     position: fixed;
  }
 
 */*footer*/
