--- a/style.css
+++ b/style.css
@@ -856,10 +856,17 @@ body {
 
  #message_text {
      text-align: center;
-    /*width: auto;
-    height: auto;*/
+     width: 100%;
+     height: 79%;
      padding: 10px 15px 5px;
+     overflow: hidden;
  }
+
+ .max_height_message_text {
+     height: 40%;
+     overflow: hidden;
+ }
+
 
 */*footer*/
  .footer {
